--- a/README
+++ b/README
@@ -3,3 +3,7 @@
 ## Québec - Tableaux Situation dans les milieux de vie pour personnes aînées et vulnérables MSSS (Données maintenant non disponibles)
 
 - [Situation dans les CHSLD et RPA, 2020-04-30](Qc/Tableau-milieux-de-vie-COVID-19-2020-04-30.pdf) MSSS, Québec
+
+## Carte des CHSLD et RPA touchés par la COVID19 au Québec (5 cas et plus)
+
+- (http://umap.openstreetmap.fr/fr/map/liste-des-chsld-et-rpa-touches-par-le-covid-19-ser_445831#10/45.5244/-73.7189)
